--- a/src/assets/styles/base/_normalize.css
+++ b/src/assets/styles/base/_normalize.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -10,7 +11,7 @@
 
 html {
     line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -38,8 +39,8 @@ main {
  */
 
 h1 {
-    font-size: 2em;
     margin: 0.67em 0;
+    font-size: 2em;
 }
 
 /* Grouping content
@@ -51,9 +52,9 @@ h1 {
  */
 
 hr {
-    box-sizing: content-box; /* 1 */
-    height: 0; /* 1 */
     overflow: visible; /* 2 */
+    height: 0; /* 1 */
+    box-sizing: content-box; /* 1 */
 }
 
 /**
@@ -124,9 +125,9 @@ small {
 
 sub,
 sup {
+    position: relative;
     font-size: 75%;
     line-height: 0;
-    position: relative;
     vertical-align: baseline;
 }
 
@@ -162,10 +163,10 @@ input,
 optgroup,
 select,
 textarea {
+    margin: 0; /* 2 */
     font-family: inherit; /* 1 */
     font-size: 100%; /* 1 */
     line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
 }
 
 /**
@@ -196,7 +197,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-    -webkit-appearance: button;
+    appearance: button;
 }
 
 /**
@@ -207,8 +208,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-    border-style: none;
     padding: 0;
+    border-style: none;
 }
 
 /**
@@ -238,11 +239,11 @@ fieldset {
  */
 
 legend {
-    box-sizing: border-box; /* 1 */
-    color: inherit; /* 2 */
     display: table; /* 1 */
     max-width: 100%; /* 1 */
+    box-sizing: border-box; /* 1 */
     padding: 0; /* 3 */
+    color: inherit; /* 2 */
     white-space: normal; /* 1 */
 }
 
@@ -288,7 +289,7 @@ textarea {
  */
 
 [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+    appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
 }
 
@@ -297,7 +298,7 @@ textarea {
  */
 
 [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+    appearance: none;
 }
 
 /**
@@ -306,7 +307,7 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
+    appearance: button; /* 1 */
     font: inherit; /* 2 */
 }
 
