--- a/src/components/CharacterCard/CharacterCard.module.css
+++ b/src/components/CharacterCard/CharacterCard.module.css
@@ -1,11 +1,12 @@
 .card {
     position: relative;
     display: flex;
+    flex-direction: column;
+    box-shadow: 0 1px 3px hsl(var(--color-dark-gray) / 30%);
 }
 
 .imageWrapper {
     position: relative;
-    width: 50%;
 }
 
 .image {
@@ -29,7 +30,6 @@
 }
 
 .content {
-    width: 50%;
     padding: 1rem;
     background-color: hsl(var(--color-dark-gray) / 5%);
 }
@@ -43,4 +43,22 @@
 .value {
     font-size: 1.25rem;
     margin-block-end: 1rem;
+}
+
+@container main (min-width: 20em) {
+    .card {
+        flex-direction: row;
+    }
+
+    .content {
+        width: 50%;
+    }
+
+    .imageWrapper {
+        width: 50%;
+    }
+
+    .image {
+        aspect-ratio: 9/10;
+    }
 }
