--- a/src/components/SearchInput/Searchinput.module.css
+++ b/src/components/SearchInput/Searchinput.module.css
@@ -11,11 +11,11 @@
 .input {
     width: 100%;
     height: 3.5rem;
-    padding: 0 3rem 0 1rem;
     border: 1px solid hsl(var(--color-dark-gray) / 25%);
     border-radius: 8px;
     box-shadow: 0 1px 2px hsl(var(--color-dark-gray) / 5%);
     font-size: 1.25rem;
+    padding-inline: 1rem 3rem;
 }
 
 .input:focus {
